# zkx

./: .bazelrc  .bazelrc.ci  .clang-format  .codespellrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  README.md  WORKSPACE.bazel  requirements.in  requirements_lock_3_11.txt
benchmark/: BUILD.bazel  curve_flag.cc  curve_flag.h  field_flag.cc  field_flag.h  plot.py  runner.cc  runner.h  scalar_generator.cc
benchmark/fft/: BUILD.bazel  benchmark.cc
benchmark/msm/: BUILD.bazel  benchmark.cc
benchmark/vec_ops/: BUILD.bazel  benchmark.cc
xla/tsl/concurrency/: BUILD.bazel  README.md  async_value.cc  async_value.h  async_value_ptr_test.cc  async_value_ref.cc  async_value_ref.h  async_value_ref_test.cc  async_value_test.cc  chain.h  concurrent_vector.h  concurrent_vector_test.cc  ref_count.h
xla/tsl/cuda/: BUILD.bazel  cublasLt_stub.cc  cublas_stub.cc  cuda_stub.cc  cudart_stub.cc  cupti_stub.cc  cusparse_stub.cc  nccl_stub.cc  stub.bzl
xla/tsl/distributed_runtime/: BUILD.bazel  call_options.cc  call_options.h
xla/tsl/framework/: BUILD.bazel  allocator.cc  allocator.h  cancellation.cc  (+2 more)
zkx/: BUILD.bazel  array.h  array2d.h  array2d_unittest.cc  array3d.h  array3d_unittest.cc  array_unittest.cc  autotune_result_wrapper.cc  autotune_result_wrapper.h  autotune_result_wrapper_unittest.cc  autotune_results.proto  autotuning.proto  comparison_util.cc  comparison_util.h  comparison_util_unittest.cc  compiler_macros.h  cpu_function_runtime.h  debug_options_flags.cc  debug_options_flags.h  debug_options_parsers.h  debug_options_parsers_unittest.cc  executable_run_options.cc  executable_run_options.h  execution_options_util.cc  execution_options_util.h  frontend_attributes.cc  frontend_attributes.h  index_util.cc  index_util.h  index_util_unittest.cc  iterator_util.h  iterator_util_unittest.cc  layout.cc  layout.h  layout_unittest.cc  layout_util.cc  layout_util.h  layout_util_unittest.cc  lazy.h  lit.bzl  (+48 more)
zkx/backends/: BUILD.bazel  kernel_emitter_test.cc  kernel_emitter_test.h
zkx/base/: BUILD.bazel  auto_reset.h  auto_reset_unittest.cc  bits.h  logging.cc  logging.h  openmp_util.h  random.cc  random.h  template_util.h  type_list.h  vlog.h
zkx/client/: BUILD.bazel  executable_build_options.cc  executable_build_options.h  executable_build_options_unittest.cc
zkx/codegen/: BUILD.bazel  device_spec.h  emitter_loc_op_builder.cc  emitter_loc_op_builder.h  kernel_definition.h  kernel_emitter.h  kernel_source.h  kernel_spec.h  llvm_ir_kernel_source.cc  llvm_ir_kernel_source.h
zkx/compiler/: BUILD.bazel  jit_compiler.cc  jit_compiler.h  jit_compiler_unittest.cc
zkx/mlir/: BUILD.bazel  codegen_utils.cc  codegen_utils.h  mlir_utils.cc  mlir_utils.h
zkx/mlir_hlo/: .clang-format  CPPLINT.cfg
zkx/pjrt/: BUILD.bazel  compile_options.proto  exceptions.h  executable_metadata.proto  execute_options.proto  host_callback.cc  host_callback.h  host_callback_unittest.cc  host_memory_spaces.cc  host_memory_spaces.h  layout_mode.cc  layout_mode.h  lru_cache.h  lru_cache_unittest.cc  mlir_to_hlo.cc  mlir_to_hlo.h  pjrt_client.cc  pjrt_client.h  pjrt_client_unittest.cc  pjrt_common.h  pjrt_compiler.cc  pjrt_compiler.h  pjrt_device_description.h  pjrt_executable.cc  pjrt_executable.h  pjrt_executable_unittest.cc  pjrt_future.cc  pjrt_future.h  pjrt_future_unittest.cc  pjrt_layout.h  pjrt_test_client.cc  pjrt_test_client.h  semaphore.cc  semaphore.h  semaphore_unittest.cc  status_casters.h  transpose.cc  transpose.h  transpose_kernels.h  transpose_unittest.cc  (+2 more)
zkx/python/: BUILD.bazel  nb_absl_flat_hash_map.h  nb_absl_flat_hash_set.h  nb_absl_inlined_vector.h  nb_absl_span.h  nb_helpers.h  nb_numpy.cc  nb_numpy.h  safe_static_init.h  types.cc  types.h
zkx/runtime/: BUILD.bazel  buffer_use.cc  buffer_use.h  buffer_use_unittest.cc
zkx/service/: BUILD.bazel  backend.cc  backend.h  buffer_assignment.cc  buffer_assignment.h  buffer_assignment.proto  buffer_value.cc  buffer_value.h  call_graph.cc  call_graph.h  call_graph_unittest.cc  call_inliner.cc  call_inliner.h  call_inliner_unittest.cc  collective_ops_utils.cc  collective_ops_utils.h  compilation_environments.cc  compilation_environments.h  compilation_environments_unittest.cc  compilation_stats.cc  compilation_stats.h  compile_time_cap.h  compiler.cc  compiler.h  computation_layout.cc  computation_layout.h  computation_placer.cc  computation_placer.h  copy_insertion.cc  copy_insertion.h  copy_insertion_unittest.cc  custom_call_status.cc  custom_call_status.h  custom_call_status_internal.h  custom_call_status_test_c_caller.c  custom_call_status_test_c_caller.h  custom_call_status_unittest.cc  custom_call_target_registry.cc  custom_call_target_registry.h  custom_call_target_registry_unittest.cc  (+125 more)
zkx/stream_executor/: BUILD.bazel  activate_context.h  allocator_stats.cc  allocator_stats.h  bit_pattern.cc  bit_pattern.h  bit_pattern_unittest.cc  build_defs.bzl  command_buffer.h  device_description.cc  device_description.h  device_description.proto  device_description_unittest.cc  device_memory.h  device_memory_allocator.h  device_memory_handle.cc  device_memory_handle.h  device_memory_handle_unittest.cc  dnn.cc  dnn.h  event.h  event_based_timer.h  executor_cache.cc  executor_cache.h  executor_cache_unittest.cc  generic_memory_allocation.h  generic_memory_allocation_unittest.cc  generic_memory_allocator.h  generic_memory_allocator_unittest.cc  host_or_device_scalar.h  kernel.cc  kernel.h  kernel_spec.cc  kernel_spec.h  kernel_unittest.cc  launch_dim.h  memory_allocation.h  memory_allocator.h  mock_platform.h  mock_stream_executor.h  (+23 more)
zkx/tests/: BUILD.bazel  build_defs.bzl  hlo_runner_agnostic_reference_mixin.cc  hlo_runner_agnostic_reference_mixin.h  hlo_runner_agnostic_test_base.cc  hlo_runner_agnostic_test_base.h  hlo_test_base.cc  hlo_test_base.h  literal_test_util.cc  literal_test_util.h  pjrt_client_registry.cc  pjrt_client_registry.h  plugin.bzl  test_macros.cc  test_macros.h  test_utils.cc  test_utils.h
zkx/tools/: BUILD.bazel  hlo_module_loader.cc  hlo_module_loader.h  hlo_module_loader_unittest.cc  run_hlo_module.proto
(+1563 files in other folders)
