load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

bool_flag(
    name = "has_exception",
    build_setting_default = False,
)

bool_flag(
    name = "has_rtti",
    build_setting_default = False,
)

config_setting(
    name = "zkx_has_exception",
    flag_values = {":has_exception": "true"},
)

config_setting(
    name = "zkx_has_rtti",
    flag_values = {":has_rtti": "true"},
)
