workspace(name = "zkx")

load("//bazel:zkx_deps.bzl", "zkx_deps")

zkx_deps()

load("//bazel:zkx_deps2.bzl", "zkx_deps2")

zkx_deps2()

load("//bazel:zkx_deps3.bzl", "zkx_deps3")

zkx_deps3()

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@zkx//third_party/gpus/cuda/hermetic:cuda_json_init_repository.bzl", "cuda_json_init_repository")

cuda_json_init_repository()

load(
    "@cuda_redist_json//:distributions.bzl",
    "CUDA_REDISTRIBUTIONS",
    # TODO(chokobole): Uncomment this when we need cuDNN.
    # "CUDNN_REDISTRIBUTIONS",
)
load(
    "@zkx//third_party/gpus/cuda/hermetic:cuda_redist_init_repositories.bzl",
    "cuda_redist_init_repositories",
    # TODO(chokobole): Uncomment this when we need cuDNN.
    # "cudnn_redist_init_repository",
)

cuda_redist_init_repositories(
    cuda_redistributions = CUDA_REDISTRIBUTIONS,
)

# TODO(chokobole): Uncomment this when we need cuDNN.
# cudnn_redist_init_repository(
#     cudnn_redistributions = CUDNN_REDISTRIBUTIONS,
# )

load(
    "@zkx//third_party/gpus/cuda/hermetic:cuda_configure.bzl",
    "cuda_configure",
)

cuda_configure(name = "local_config_cuda")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
http_archive(
    name = "hedron_compile_commands",
    strip_prefix = "bazel-compile-commands-extractor-ed994039a951b736091776d677f324b3903ef939",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/ed994039a951b736091776d677f324b3903ef939.tar.gz",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()
