load("@com_google_protobuf//:protobuf.bzl", "cc_proto_library")
load("//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

cc_proto_library(
    name = "zkx_data_proto",
    srcs = ["zkx_data.proto"],
)

zkx_cc_library(
    name = "primitive_util",
    srcs = ["primitive_util.cc"],
    hdrs = ["primitive_util.h"],
    deps = [
        ":types",
        ":zkx_data_proto",
        "//xla/tsl/lib/math:math_util",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "printer",
    srcs = ["printer.cc"],
    hdrs = ["printer.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:cord",
    ],
)

zkx_cc_library(
    name = "shape_util",
    srcs = ["shape_util.cc"],
    hdrs = ["shape_util.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "types",
    hdrs = ["types.h"],
)
