load("@com_google_protobuf//:protobuf.bzl", "cc_proto_library")
load("//bazel:zkx_cc.bzl", "zkx_cc_library", "zkx_cc_unittest")

package(default_visibility = ["//visibility:public"])

cc_proto_library(
    name = "zkx_proto",
    srcs = ["zkx.proto"],
    deps = [
        ":zkx_data_proto",
        "@com_google_protobuf//:cc_wkt_protos",
    ],
)

cc_proto_library(
    name = "zkx_data_proto",
    srcs = ["zkx_data.proto"],
)

zkx_cc_library(
    name = "array",
    hdrs = ["array.h"],
    deps = [
        ":types",
        ":util",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "array2d",
    hdrs = ["array2d.h"],
    deps = [
        ":array",
        "//zkx/base:bits",
        "@com_google_absl//absl/functional:function_ref",
    ],
)

zkx_cc_library(
    name = "array3d",
    hdrs = ["array3d.h"],
    deps = [":array"],
)

zkx_cc_library(
    name = "comparison_util",
    srcs = ["comparison_util.cc"],
    hdrs = ["comparison_util.h"],
    deps = [
        ":primitive_util",
        ":zkx_data_proto",
        "//zkx/base:logging",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "cpu_function_runtime",
    hdrs = ["cpu_function_runtime.h"],
    deps = [
        "//zkx/backends/cpu:alignment",
        "@com_google_absl//absl/log:check",
    ],
)

zkx_cc_library(
    name = "executable_run_options",
    srcs = ["executable_run_options.cc"],
    hdrs = ["executable_run_options.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/status:statusor",
    ],
)

zkx_cc_library(
    name = "iterator_util",
    hdrs = ["iterator_util.h"],
    deps = ["//xla/tsl/lib/gtl:iterator_range"],
)

zkx_cc_library(
    name = "lazy",
    hdrs = ["lazy.h"],
    deps = ["@com_google_absl//absl/functional:any_invocable"],
)

zkx_cc_library(
    name = "literal",
    srcs = ["literal.cc"],
    hdrs = ["literal.h"],
    deps = [
        ":array",
        ":array2d",
        ":array3d",
        ":maybe_owning",
        ":primitive_util",
        ":shape_util",
        ":util",
        "//xla/tsl/platform:mem",
        "//xla/tsl/platform:status",
        "@com_google_absl//absl/log:check",
    ],
)

zkx_cc_library(
    name = "literal_pool",
    srcs = ["literal_pool.cc"],
    hdrs = ["literal_pool.h"],
    deps = [
        ":literal",
        "//zkx/base:logging",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "literal_util",
    srcs = ["literal_util.cc"],
    hdrs = ["literal_util.h"],
    deps = [
        ":literal",
        ":primitive_util",
        ":shape_util",
        "//xla/tsl/platform:status",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "map_util",
    hdrs = ["map_util.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
    ],
)

zkx_cc_library(
    name = "maybe_owning",
    hdrs = ["maybe_owning.h"],
    deps = ["@com_google_absl//absl/log:check"],
)

zkx_cc_library(
    name = "overflow_util",
    hdrs = ["overflow_util.h"],
    deps = ["@com_google_absl//absl/base:core_headers"],
)

zkx_cc_library(
    name = "permutation_util",
    srcs = ["permutation_util.cc"],
    hdrs = ["permutation_util.h"],
    deps = [
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "primitive_util",
    srcs = ["primitive_util.cc"],
    hdrs = ["primitive_util.h"],
    deps = [
        ":types",
        ":zkx_data_proto",
        "//xla/tsl/lib/math:math_util",
        "//zkx/base:logging",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "printer",
    srcs = ["printer.cc"],
    hdrs = ["printer.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:cord",
    ],
)

zkx_cc_library(
    name = "shape_layout",
    srcs = ["shape_layout.cc"],
    hdrs = ["shape_layout.h"],
    deps = [
        ":printer",
        ":shape_util",
        "//xla/tsl/platform:status",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
    ],
)

zkx_cc_library(
    name = "shape_util",
    srcs = [
        "index_util.cc",
        "layout.cc",
        "layout_util.cc",
        "shape.cc",
        "shape_util.cc",
    ],
    hdrs = [
        "index_util.h",
        "layout.h",
        "layout_util.h",
        "shape.h",
        "shape_util.h",
    ],
    deps = [
        ":overflow_util",
        ":permutation_util",
        ":primitive_util",
        ":printer",
        ":util",
        ":zkx_data_proto",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:status",
        "//xla/tsl/platform:statusor",
        "//zkx/base:logging",
        "//zkx/base/strings:string_util",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/hash",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
    ],
)

zkx_cc_library(
    name = "shape_tree",
    srcs = ["shape_tree.cc"],
    hdrs = ["shape_tree.h"],
    deps = [
        ":shape_util",
        "//xla/tsl/lib/gtl:iterator_range",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/functional:function_ref",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
    ],
)

zkx_cc_library(
    name = "status_macros",
    srcs = ["status_macros.cc"],
    hdrs = ["status_macros.h"],
    deps = [
        "//zkx/base:logging",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/base:log_severity",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

zkx_cc_library(
    name = "types",
    hdrs = ["types.h"],
)

zkx_cc_library(
    name = "util",
    srcs = ["util.cc"],
    hdrs = ["util.h"],
    deps = [
        ":status_macros",
        "//xla/tsl/lib/math:math_util",
        "//zkx:zkx_data_proto",
        "//zkx/base:logging",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/numeric:bits",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:span",
        "@eigen_archive//:eigen3",
    ],
)

zkx_cc_unittest(
    name = "zkx_unittests",
    srcs = [
        "array2d_unittest.cc",
        "array3d_unittest.cc",
        "array_unittest.cc",
        "comparison_util_unittest.cc",
        "index_util_unittest.cc",
        "iterator_util_unittest.cc",
        "layout_unittest.cc",
        "layout_util_unittest.cc",
        "maybe_owning_unittest.cc",
        "permutation_util_unittest.cc",
        "status_macros_unittest.cc",
        "util_unittest.cc",
    ],
    deps = [
        ":array",
        ":array2d",
        ":array3d",
        ":comparison_util",
        ":iterator_util",
        ":maybe_owning",
        ":permutation_util",
        ":shape_util",
        ":status_macros",
        ":util",
        "//xla/tsl/platform:errors",
        "//xla/tsl/platform:statusor",
    ],
)
