# Copyright 2025 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//bazel:zkx_cc.bzl", "zkx_cc_binary")

zkx_cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cc"],
    deps = [
        "//benchmark:curve_flag",
        "//benchmark:runner",
        "//zkx:literal_util",
        "//zkx/math/elliptic_curve/bn/bn254:g1",
        "//zkx/math/elliptic_curve/bn/bn254:g2",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/strings",
    ],
)
