load("//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "kernel_emitter_test",
    testonly = True,
    srcs = ["kernel_emitter_test.cc"],
    hdrs = ["kernel_emitter_test.h"],
    deps = [
        "//xla/tsl/platform:statusor",
        "//zkx:literal",
        "//zkx/hlo/parser:hlo_parser",
        "//zkx/service:hlo_runner",
        "//zkx/service:platform_util",
        "@com_google_absl//absl/status:status_matchers",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest",
    ],
)
