load("//bazel:zkx.bzl", "if_android")
load("//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "bits",
    hdrs = ["bits.h"],
    deps = ["@com_google_absl//absl/numeric:bits"],
)

zkx_cc_library(
    name = "logging",
    srcs = ["logging.cc"],
    hdrs = ["logging.h"],
    deps = [
        "//xla/tsl/platform",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
    ] + if_android(
        [],
        [
            "@com_google_absl//absl/base",
            "@com_google_absl//absl/strings:str_format",
            "//xla/tsl/platform:env_time",
        ],
    ),
)
